a	modified:   build.gradle b	deleted:    buildSrc/build.gradle b	deleted:    buildSrc/src/main/groovy/com/manning/gia/ProjectVersion.groovy d	deleted:    buildSrc/src/main/groovy/com/manning/gia/smoke/HttpSmokeTest.groovy e	deleted:    buildSrc/src/main/groovy/com/manning/gia/ssh/Scp.groovy f	deleted:    buildSrc/src/main/groovy/com/manning/gia/ssh/SshExec.groovy g	modified:   gradle/functionalTest.gradle h	modified:   gradle/integrationTest.gradle i	modified:   gradle/jacoco.gradle j	modified:   gradle/sshDeploy.gradle k	modified:   web/build.gradle

--- a/gradle/functionalTest.gradle
+++ b/gradle/functionalTest.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'jetty'
+//apply plugin: 'jetty'
 apply plugin: 'groovy'
 
 configurations {
@@ -40,7 +40,7 @@ ext {
     functionalJettyStopKey = 'stopKey'
     functionalJettyContextPath = 'todo'
 }
-
+/*
 task functionalJettyRun(type: org.gradle.api.plugins.jetty.JettyRun) {
     httpPort = functionalJettyHttpPort
     stopPort = functionalJettyStopPort
@@ -53,7 +53,7 @@ task functionalJettyStop(type: org.gradle.api.plugins.jetty.JettyStop) {
     stopPort = functionalJettyStopPort
     stopKey = functionalJettyStopKey
 }
-
+*/
 task localFunctionalTest(type: Test) {
     testClassesDir = sourceSets.functionalTest.output.classesDir
     classpath = sourceSets.functionalTest.runtimeClasspath
@@ -61,8 +61,8 @@ task localFunctionalTest(type: Test) {
     reports.junitXml.destination = functionalTestResultsDir
     systemProperties functionalCommonSystemProperties
     systemProperty 'geb.build.baseUrl', "http://localhost:$functionalJettyHttpPort/$functionalJettyContextPath/"
-    dependsOn functionalJettyRun
-    finalizedBy functionalJettyStop
+ //   dependsOn functionalJettyRun
+ //   finalizedBy functionalJettyStop
 }
 
 check.dependsOn localFunctionalTest
@@ -75,3 +75,13 @@ task remoteFunctionalTest(type: Test) {
     systemProperties functionalCommonSystemProperties
     systemProperty 'geb.build.baseUrl', "http://$config.tomcat.hostname:$config.tomcat.port/$config.tomcat.context/"
 }
+buildscript {
+    repositories { 
+    		jcenter() 
+    	}
+    dependencies {
+    		 classpath 'org.akhikhl.gretty:gretty:+' 
+    	}
+}
+
+apply plugin: 'org.akhikhl.gretty'
