--- a/gradle/sshDeploy.gradle
+++ b/gradle/sshDeploy.gradle
@@ -4,7 +4,7 @@ import com.manning.gia.ssh.SshExec
 apply from: "$rootDir/gradle/downloadWar.gradle"
 
 ext {
-    warFile = configurations.todo.singleFile
+  //  warFile = configurations.todo.singleFile
     tomcatRemoteDir = '/opt/apache-tomcat-7.0.42'
 
     userHome = System.properties['user.home']
@@ -22,7 +22,7 @@ dependencies {
 
 task copyWarToServer(type: Scp, dependsOn: fetchToDoWar) {
     classpath = configurations.jsch
-    sourceFile = warFile
+ //   sourceFile = warFile
     destination = remoteTmpDir
     keyFile = vagrantKeyFile
     port = config.server.sshPort
@@ -57,7 +57,7 @@ task deleteOldArtifacts(dependsOn: [deleteTomcatWebappsDir, deleteTomcatWorkDir]
         logger.quiet "Deleting old WAR artifacts."
     }
 }
-
+/*
 task copyWarToWebappsDir(type: SshExec, dependsOn: deleteOldArtifacts) {
     command = "sudo -u tomcat cp /tmp/$warFile.name $tomcatRemoteDir/webapps/todo.war"
 
@@ -73,5 +73,5 @@ task startupTomcat(type: SshExec, dependsOn: copyWarToWebappsDir) {
         logger.quiet "Starting up remote Tomcat."
     }
 }
-
-task deployWar(dependsOn: startupTomcat)
+*/
+//task deployWar(dependsOn: startupTomcat)
