--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -1,4 +1,4 @@
-import com.manning.gia.ProjectVersion
+/* import com.manning.gia.ProjectVersion */
 
 allprojects {
     ext.buildTimestamp = new Date().format('yyyy-MM-dd HH:mm:ss')
