a1	modified:   build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-apply from: "$rootDir/gradle/envConfig.gradle"
+//apply from: "$rootDir/gradle/envConfig.gradle"
 apply from: "$rootDir/gradle/versioning.gradle"
 apply plugin: 'sonar-runner'
 
