--- a/gradle/functionalTest.gradle
+++ b/gradle/functionalTest.gradle
@@ -73,5 +73,6 @@ task remoteFunctionalTest(type: Test) {
     reports.html.destination = functionalTestReportDir
     reports.junitXml.destination = functionalTestResultsDir
     systemProperties functionalCommonSystemProperties
-    systemProperty 'geb.build.baseUrl', "http://$config.tomcat.hostname:$config.tomcat.port/$config.tomcat.context/"
+ //   systemProperty 'geb.build.baseUrl', "http://$config.tomcat.hostname:$config.tomcat.port/$config.tomcat.context/"
+   systemProperty 'geb.build.baseUrl', "http://localhost:8099/todo/"
 }
