--- a/gradle/sshDeploy.gradle
+++ b/gradle/sshDeploy.gradle
@@ -16,9 +16,18 @@ configurations {
     jsch
 }
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        jsch jsch 'org.apache.ant:ant-jsch:1.9.1'
+    }
+}
+
 dependencies {
-   // jsch 'org.apache.ant:ant-jsch:1.9.1'
-   jsch 'org.apache.ant:ant-jsch:0.9.1'
+    jsch 'org.apache.ant:ant-jsch:1.9.1'
 }
 
 task copyWarToServer(type: Scp, dependsOn: fetchToDoWar) {
