avep	modified:   gradle/downloadWar.gradle

--- a/gradle/downloadWar.gradle
+++ b/gradle/downloadWar.gradle
@@ -1,6 +1,7 @@
 repositories {
     maven { 
-        url config.binaryRepository.releaseUrl 
+       // url config.binaryRepository.releaseUrl 
+	url "http://localhost:8081/artifactory/libs-release-local"
     }
 }
 
