--- a/gradle/envConfig.gradle
+++ b/gradle/envConfig.gradle
@@ -2,7 +2,8 @@ def configFile = file("$rootDir/gradle/config/buildConfig.groovy")
 def env = project.hasProperty('env') ? project.getProperty('env') : 'test'
 logger.quiet "Loading configuration for environment '$env'."
 //def parsedConfig = new ConfigSlurper(env).parse(configFile.toURL())//
+def parsedConfig = new ConfigSlurper().parse(configFile.toURL())
 
 allprojects {
-//    ext.config = parsedConfig
+    ext.config = parsedConfig
 }
