--- a/gradle/envConfig.gradle
+++ b/gradle/envConfig.gradle
@@ -1,9 +1,9 @@
 def configFile = file("$rootDir/gradle/config/buildConfig.groovy")
 def env = project.hasProperty('env') ? project.getProperty('env') : 'test'
 logger.quiet "Loading configuration for environment '$env'."
-//def parsedConfig = new ConfigSlurper(env).parse(configFile.toURL())//
-def parsedConfig = new ConfigSlurper().parse(configFile.toURL())
+def parsedConfig = new ConfigSlurper(env).parse(configFile.toURL())
 
 allprojects {
     ext.config = parsedConfig
 }
+
