oooo	modified:   gradle/envConfig.gradle

--- a/gradle/envConfig.gradle
+++ b/gradle/envConfig.gradle
@@ -2,9 +2,9 @@ def configFile = file("$rootDir/gradle/config/buildConfig.groovy")
 def env = project.hasProperty('env') ? project.getProperty('env') : 'test'
 logger.quiet "Loading configuration for environment '$env'."
 def filesss=configFile.toURL()
-def parsedConfig = new ConfigSlurper(env).parse(filesss)
+//def parsedConfig = new ConfigSlurper(env).parse(filesss)
 
 allprojects {
-    ext.config = parsedConfig
+//    ext.config = parsedConfig
 }
 
